fix: remove broken style

--- a/css/footer.css
+++ b/css/footer.css
@@ -11,11 +11,6 @@
     & li {
       list-style: none;
     }
-
-    /* Inner links grid */
-    & .inner-grid {
-      align-items: top;
-    }
   }
 
   /* Heading colours */
